--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import "https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css";
 * {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .green {
@@ -22,8 +22,8 @@
   margin: 5px auto;
 }
 .header__item ul {
-  margin: 0;
-  padding: 0;
+  margin: 2px;
+  padding: 2px;
 }
 .header__item button {
   margin-top: 5px;
@@ -60,25 +60,15 @@
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
-.navbar #logo1:hover {
+.navbar .logo1-transform {
   -o-transform: scaleX(-1);
   -ms-transform: scaleX(-1);
   -moz-transform: scaleX(-1);
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
 }
-.navbar #logo2 {
-  -o-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
-.navbar #logo2:hover {
-  scale: 0.8;
-  opacity: 0;
-}
 
-.navbar-opacity {
+.navbar-transform {
   opacity: 0.85;
   transition: 1s;
 }
@@ -148,6 +138,62 @@
 
 .main-text-size {
   font-size: 0.97rem;
+}
+
+.sidepanel {
+  position: fixed;
+  left: 2rem;
+  top: 200px;
+  height: 350px;
+  width: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sidepanel__wrapper {
+  position: fixed;
+  -webkit-transition: scale 1s, -webkit-transform 1s;
+  transition: scale 1s, transform 1s;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+.sidepanel__text {
+  width: 120px;
+  height: 120px;
+  font-size: 1rem;
+  color: #085507;
+}
+.sidepanel__text span {
+  display: flex;
+  transform: rotate(-90deg) translateX(-50px);
+}
+
+.sidepanel__divider {
+  width: 1px;
+  height: 80px;
+  background-color: #085507;
+}
+
+.sidepanel__icon {
+  width: 30px;
+  height: 30px;
+}
+.sidepanel__icon img {
+  width: 100%;
+  transition: 0.25s ease-in-out;
+}
+.sidepanel__icon img:hover {
+  transform: scale(1.2);
+}
+
+.sidepanel-transform {
+  -webkit-transition: scale 1s, -webkit-transform 1s;
+  transition: scale 1s, transform 1s;
+  -webkit-transform: translate3d(0, -999px, 0);
+  transform: translate3d(0, -999px, 0);
 }
 
 .icons {
@@ -242,10 +288,10 @@
 .socialnet-item {
   position: relative;
   width: 345px;
-  height: 181px;
+  height: 171px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   background: #FFFFFF;
-  border-radius: 55px;
+  border-radius: 25px;
   padding-left: 43px;
   padding-top: 15px;
   overflow: hidden;
@@ -421,8 +467,8 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  margin-left: 3rem;
-  margin-right: 3rem;
+  margin-left: 2.7rem;
+  margin-right: 2.7rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
@@ -465,7 +511,7 @@
     border-top: 0.25rem dotted #9BC715;
     width: 5rem;
     position: absolute;
-    left: 9.3rem;
+    left: 9.1rem;
     top: 1.2125rem;
   }
   .timeline-steps .timeline-step:not(:first-child):before {
@@ -474,7 +520,7 @@
     border-top: 0.25rem dotted #9BC715;
     width: 6rem;
     position: absolute;
-    right: 9.5rem;
+    right: 9.1rem;
     top: 1.2125rem;
   }
 }
@@ -503,10 +549,10 @@
   max-width: 160px;
 }
 
-.grayscale {
+.scale {
   transition: 0.25s ease-in-out;
 }
-.grayscale:hover {
+.scale:hover {
   transform: scale(1.2);
 }
 
@@ -612,43 +658,47 @@
 }
 
 figure.effect-text-three img {
-  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
+  transition-delay: 0.4s;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s ease-in-out;
+  transition: opacity 0.35s, transform 0.35s ease-in-out;
   transform: translate3d(0, 0, 0);
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 figure.effect-text-three .combo {
-  -webkit-transition: scale 0.35s, -webkit-transform 0.35s;
-  transition: scale 0.35s, transform 0.35s;
+  transition-delay: 0.4s;
+  -webkit-transition: scale 0.35s, -webkit-transform 0.35s ease-in-out;
+  transition: scale 0.35s, transform 0.35s ease-in-out;
 }
 figure.effect-text-three:hover img {
+  transition-delay: 0.4s;
   -webkit-transform: translate3d(60px, 0, 0);
   transform: translate3d(60px, 0, 0);
 }
 figure.effect-text-three:hover ul {
+  transition-delay: 0.4s;
   opacity: 1;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
 figure.effect-text-three:hover .timeline {
+  transition-delay: 0.4s;
   opacity: 1;
 }
 figure.effect-text-three:hover .combo {
-  -webkit-transition: scale 0.35s, -webkit-transform 0.35s;
-  transition: scale 0.35s, transform 0.35s;
-  -webkit-transform: translate3d(70px, 0, 0);
-  transform: translate3d(70px, 0, 0);
-  scale: 0.75;
+  transition-delay: 0.4s;
+  -webkit-transform: translate3d(70px, 0, 0) scale(0.75);
+  transform: translate3d(70px, 0, 0) scale(0.75);
 }
 figure.effect-text-three figcaption {
   text-align: left;
 }
 figure.effect-text-three ul {
+  transition-delay: 0.4s;
   padding-top: 1.5em;
   opacity: 0;
   -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s ease-in-out;
   -webkit-transform: translate3d(30%, 0, 0);
   transform: translate3d(30%, 0, 0);
 }
