--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -664,6 +664,23 @@ figure.effect-text-three
         text-decoration: none
         color: #000
         font-size: 11pt
+.calc__input
+    width: 200px
+.calc
+    .btn
+        color: #000
+        --bs-btn-hover-bg: #e4e4e4 
+        //--bs-btn-color: #085507
+        --bs-btn-border-color: #9BC715
+        --bs-btn-hover-border-color: #9BC715
+        --bs-btn-active-border-color: #9BC715
+        --bs-btn-active-bg: #9bc715
+        --bs-btn-focus-shadow-rgb: 155,199,21
+    h3
+        background-color: #9BC715
+        text-align: center
+        line-height: 53px
+
 
 
 
