--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -665,7 +665,7 @@ figure.effect-text-three
         color: #000
         font-size: 11pt
 .calc__input
-    width: 200px
+    width: 180px
 .calc
     .btn
         color: #000
@@ -680,7 +680,12 @@ figure.effect-text-three
         background-color: #9BC715
         text-align: center
         line-height: 53px
-
+.accordion-drink
+    width: 15rem
+.accordion-button
+    background-color: #f8f9fa
+    &:not(.collapsed)
+        color: #000
 
 
 
