--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -666,9 +666,13 @@ figure.effect-text-three
         font-size: 11pt
 .calc__input
     width: 180px
+.calc_item_active
+    color: #fff
+    background-color: #9BC715
 .calc
     .btn
-        color: #000
+        --bs-btn-color: #000
+        --bs-btn-hover-color: #000
         --bs-btn-hover-bg: #e4e4e4 
         //--bs-btn-color: #085507
         --bs-btn-border-color: #9BC715
@@ -686,6 +690,8 @@ figure.effect-text-three
     background-color: #f8f9fa
     &:not(.collapsed)
         color: #000
+.hide_receipts
+    display: none
 
 
 
