--- a/src/css/style.css
+++ b/src/css/style.css
@@ -736,8 +736,14 @@ figure.effect-text-three ul {
   width: 180px;
 }
 
+.calc_item_active {
+  color: #fff;
+  background-color: #9BC715;
+}
+
 .calc .btn {
-  color: #000;
+  --bs-btn-color: #000;
+  --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #e4e4e4;
   --bs-btn-border-color: #9BC715;
   --bs-btn-hover-border-color: #9BC715;
@@ -760,4 +766,8 @@ figure.effect-text-three ul {
 }
 .accordion-button:not(.collapsed) {
   color: #000;
+}
+
+.hide_receipts {
+  display: none;
 }
