--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -684,10 +684,12 @@ figure.effect-text-three
         background-color: #9BC715
         text-align: center
         line-height: 53px
+.accordion
+    --bs-accordion-border-color: #cbcfd3
 .accordion-drink
     width: 15rem
 .accordion-button
-    background-color: #f8f9fa
+    background-color: #ebeef1
     &:not(.collapsed)
         color: #000
 .hide_receipts
