--- a/src/css/style.css
+++ b/src/css/style.css
@@ -757,12 +757,16 @@ figure.effect-text-three ul {
   line-height: 53px;
 }
 
+.accordion {
+  --bs-accordion-border-color: #cbcfd3;
+}
+
 .accordion-drink {
   width: 15rem;
 }
 
 .accordion-button {
-  background-color: #f8f9fa;
+  background-color: #ebeef1;
 }
 .accordion-button:not(.collapsed) {
   color: #000;
@@ -770,4 +774,4 @@ figure.effect-text-three ul {
 
 .hide_receipts {
   display: none;
-}
+}/*# sourceMappingURL=style.css.map */
