--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -267,6 +267,7 @@ $darkgreen: #085507
     width: 70%
     margin-left: auto
     margin-right: auto
+    margin-bottom: 50px
     img
         width: 300px
         display: block
@@ -669,7 +670,10 @@ figure.effect-text-three
 .calc_item_active
     color: #fff
     background-color: #9BC715
+    
 .calc
+    a
+        color: #9BC715 
     .btn
         --bs-btn-color: #000
         --bs-btn-hover-color: #000
@@ -684,6 +688,9 @@ figure.effect-text-three
         background-color: #9BC715
         text-align: center
         line-height: 53px
+    .calc_alert
+        border: 2px solid red
+        //background-color: #ff000081
 .accordion
     --bs-accordion-border-color: #cbcfd3
 .accordion-drink
@@ -694,6 +701,11 @@ figure.effect-text-three
         color: #000
 .hide_receipts
     display: none
+.toast-body
+    a
+        color: #085507
+
+
 
 
 
