--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -701,6 +701,9 @@ figure.effect-text-three
         color: #000
 .hide_receipts
     display: none
+.toast
+        --bs-toast-border-color: #9BC715
+        --bs-toast-border-width: 1px
 .toast-body
     a
         color: #085507
