--- a/src/css/style.css
+++ b/src/css/style.css
@@ -784,10 +784,15 @@ figure.effect-text-three ul {
 }
 
 .toast {
-  --bs-toast-border-color: #9BC715;
+  --bs-toast-border-color: #085507;
   --bs-toast-border-width: 1px;
 }
 
 .toast-body a {
   color: #085507;
-}/*# sourceMappingURL=style.css.map */
+}
+
+.toast-header {
+  color: #000;
+  background-color: #9BC715;
+}
