--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -702,11 +702,14 @@ figure.effect-text-three
 .hide_receipts
     display: none
 .toast
-        --bs-toast-border-color: #9BC715
+        --bs-toast-border-color: #085507
         --bs-toast-border-width: 1px
 .toast-body
     a
         color: #085507
+.toast-header
+    color: #000
+    background-color: #9BC715
 
 
 
