--- a/src/css/style.css
+++ b/src/css/style.css
@@ -747,10 +747,10 @@ figure.effect-text-three ul {
 }
 .calc .btn {
   --bs-btn-color: #000;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #e4e4e4;
-  --bs-btn-border-color: #9BC715;
-  --bs-btn-hover-border-color: #9BC715;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #9BC715;
+  --bs-btn-border-color: #0000003b;
+  --bs-btn-hover-border-color: #085507;
   --bs-btn-active-border-color: #9BC715;
   --bs-btn-active-bg: #9bc715;
   --bs-btn-focus-shadow-rgb: 155,199,21;
@@ -762,6 +762,9 @@ figure.effect-text-three ul {
 }
 .calc .calc_alert {
   border: 2px solid red;
+}
+.calc .calc_item_active {
+  color: #000;
 }
 
 .accordion {
