--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -675,12 +675,13 @@ figure.effect-text-three
     a
         color: #9BC715 
     .btn
+        //color: #000
         --bs-btn-color: #000
-        --bs-btn-hover-color: #000
-        --bs-btn-hover-bg: #e4e4e4 
+        --bs-btn-hover-color: #fff
+        --bs-btn-hover-bg: #9BC715 
         //--bs-btn-color: #085507
-        --bs-btn-border-color: #9BC715
-        --bs-btn-hover-border-color: #9BC715
+        --bs-btn-border-color: #0000003b
+        --bs-btn-hover-border-color: #085507
         --bs-btn-active-border-color: #9BC715
         --bs-btn-active-bg: #9bc715
         --bs-btn-focus-shadow-rgb: 155,199,21
@@ -690,7 +691,8 @@ figure.effect-text-three
         line-height: 53px
     .calc_alert
         border: 2px solid red
-        //background-color: #ff000081
+    .calc_item_active
+        color: #000
 .accordion
     --bs-accordion-border-color: #cbcfd3
 .accordion-drink
