--- a/src/css/style.css
+++ b/src/css/style.css
@@ -268,6 +268,21 @@
   visibility: hidden;
 }
 
+.form-contacts {
+  position: relative;
+}
+.form-contacts::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../img/loading.gif") center/50px no-repeat;
+  opacity: 0;
+  visibility: hidden;
+}
+
 .sending::after {
   opacity: 1;
   visibility: visible;
@@ -342,7 +357,7 @@
 .send-request-modal {
   color: #085507;
   --bs-btn-bg: #fff;
-  --bs-btn-border-color: #085507;
+  --bs-btn-border-color: $darkgreen;
 }
 .send-request-modal:hover {
   color: #fff;
