--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -45,6 +45,15 @@ $darkgreen: #085507
     .btn
         margin-left: 5px
         color: $darkgreen
+    .btn-group
+        margin-left: 5px
+        margin-right: 5px
+        .btn
+            --bs-btn-active-bg: #9ac71500
+            --bs-btn-focus-shadow-rgb: 255,255,255,0
+        .active
+            background-color: $litegreen 
+            
     #navbarNav
         a
             font-size: 11pt
@@ -59,6 +68,9 @@ $darkgreen: #085507
         -moz-transform: scaleX(-1)
         -webkit-transform: scaleX(-1)
         transform: scaleX(-1)
+    &::before
+        margin-left: 10px
+        
 
 .navbar-transform
         opacity: .85
@@ -67,6 +79,10 @@ $darkgreen: #085507
 .btn-group
     list-style-type: none
     padding-left: 0px
+
+.btn-lang
+    margin: 10px 0 0 5px 
+    color: $darkgreen
 
 .dropdown-item
     --bs-dropdown-link-hover-color: #000
@@ -679,7 +695,6 @@ figure.effect-text-three
 .toast-header
     color: #000
     background-color: $litegreen
-
 
 
 
