--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -44,18 +44,20 @@ $darkgreen: #085507
     z-index: 200
     .btn
         margin-left: 5px
-        color: $darkgreen
+        // color: $darkgreen
     .btn-group
         margin-right: 5px
         .btn
             --bs-btn-active-bg: #9ac71500
             --bs-btn-focus-shadow-rgb: 255,255,255,0
         .active
-            background-color: $litegreen 
-            
+            background-color: $litegreen
     #navbarNav
         a
             font-size: 11pt
+        .lang
+            a
+                font-size: 10pt
     #logo1
         -o-transition: all 0.5s ease-in-out
         -moz-transition: all 0.5s ease-in-out
@@ -531,6 +533,8 @@ $darkgreen: #085507
             content: "- "
 
 .cards
+    a
+        color: $litegreen
     padding-bottom: 30px
     .card
         height: 100%
