--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -138,6 +138,23 @@ $darkgreen: #085507
 .main-text-size
     font-size: .97rem
 
+.legal-text-size
+    font-size: .9rem
+    line-height: 1.4
+
+.legal-link
+    &:hover
+            color: $darkgreen
+            text-decoration: underline
+
+.policy
+    li
+        list-style-type: none
+        &:before
+            color: $litegreen
+            content: "●"
+            padding-right: 10px
+
 .sidepanel
     position: fixed
     left: 2rem
