--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -212,13 +212,37 @@ $darkgreen: #085507
         margin: 15px auto
         width: 250pt
         box-shadow: 0px 2px 20px 1px rgba(0, 0, 0, 0.1)
-        --bs-card-border-width: 0px
+        --bs-card-border-width: 1px
         img
             margin-left: auto
             margin-right: auto
             margin-top: 10px
             height: 25%15px
             width: 25%
+            transition: .5s
+            &:hover
+                transform: scale(1.2)
+
+.indexicons
+    margin-bottom: 0px
+    width: 99%
+    a
+        color: $litegreen
+    p
+        line-height: 1.3
+    .card
+        margin: 20px auto
+        width: 170pt
+        height: 180%
+        box-shadow: 0px 2px 20px 1px rgba(0, 0, 0, 0.1)
+        --bs-card-border-width: 1px
+        img
+            margin-left: auto
+            margin-right: auto
+            margin-top: 20px
+            margin-bottom: 5px
+            height: 25%15px
+            width: 50%
             transition: .5s
             &:hover
                 transform: scale(1.2)
@@ -235,6 +259,29 @@ $darkgreen: #085507
         font-size: 10pt
         bottom: 10px
         left: 15px
+        color: #fff
+    img
+        border-radius: 5px
+        margin-left: auto
+        margin-right: auto
+        display: block
+        transition: .5s
+        &:hover
+            transform: scale(1.2)
+
+.indeximage
+    overflow: hidden
+    // margin-left: auto
+    // margin-right: auto
+    width: 93%
+    border-radius: 5px
+    position: relative
+    left: 15px
+    .bottom-left
+        position: absolute
+        font-size: 14pt
+        bottom: 15px
+        left: 20px
         color: #fff
     img
         border-radius: 5px
@@ -561,6 +608,13 @@ $darkgreen: #085507
             color: #fd0000
             content: "●"
             padding-right: 10px
+
+.indexcards
+    a
+        color: $litegreen
+    padding-bottom: 0px
+    .card
+        height: 90%
 
 .indent
     text-indent: 1.5rem
