--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -72,7 +72,6 @@ $darkgreen: #085507
     &::before
         margin-left: 10px
         
-
 .navbar-transform
         opacity: .85
         transition: 1s
@@ -276,7 +275,7 @@ $darkgreen: #085507
     width: 93%
     border-radius: 5px
     position: relative
-    left: 15px
+    left: 12px
     .bottom-left
         position: absolute
         font-size: 14pt
@@ -585,6 +584,10 @@ $darkgreen: #085507
         height: 40px
         &:hover
             background-color: #fff
+    .img
+        width: 31%
+        font-size: 0
+        display: inline-block
 
 .app
     width: 220px
@@ -769,9 +772,31 @@ figure.effect-text-three
 .toast-header
     color: #000
     background-color: $litegreen
+.slider
+    position: relative
+    padding: 0px 150px 0px
+    .slick-arrow
+        position: absolute
+        top: 50%
+        margin: -50px 0px 0px 0px
+        z-index: 10
+        font-size: 0
+        width: 30px
+        height: 50px
+    .slick-prev
+        border: 0px
+        left: 0
+        background: url('../img/index/sl_arrow_l.webp') 0 0 / 100% no-repeat
+    .slick-next
+        border: 0px
+        right: 0
+        background: url('../img/index/sl_arrow_r.webp') 0 0 / 100% no-repeat
+.slider__item
+    text-align: center
 
+.slick-track
+    display: flex
 
-
-
-
+.slick-list
+    overflow: hidden
 
