--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -328,7 +328,7 @@ $darkgreen: #085507
         transition: all 0.5s ease 0s
 
 .consultation
-    width: 70%
+    width: 60%
     margin-left: auto
     margin-right: auto
     margin-bottom: 50px
@@ -774,6 +774,7 @@ figure.effect-text-three
     background-color: $litegreen
 .slider
     position: relative
+    right: 12px
     padding: 0px 150px 0px
     .slick-arrow
         position: absolute
@@ -785,11 +786,11 @@ figure.effect-text-three
         height: 50px
     .slick-prev
         border: 0px
-        left: 0
+        left: 20px
         background: url('../img/index/sl_arrow_l.webp') 0 0 / 100% no-repeat
     .slick-next
         border: 0px
-        right: 0
+        right: 20px
         background: url('../img/index/sl_arrow_r.webp') 0 0 / 100% no-repeat
 .slider__item
     text-align: center
