--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -797,11 +797,21 @@ figure.effect-text-three
     .slick-prev
         border: 0px
         left: 20px
+        opacity: 50%
+        transition: 0.3s
         background: url('../img/index/sl_arrow_l.webp') 0 0 / 100% no-repeat
+        &:hover
+            opacity: 100%
+            transition: 0.3s
     .slick-next
         border: 0px
         right: 20px
+        opacity: 50%
+        transition: 0.3s
         background: url('../img/index/sl_arrow_r.webp') 0 0 / 100% no-repeat
+        &:hover
+            opacity: 100%
+            transition:0.3s
 .slider__item
     text-align: center
 
