--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -414,6 +414,9 @@ $darkgreen: #085507
     color: #fff
     text-align: center
     margin-bottom: 35px
+    h1
+        font-size: 30px
+        line-height: 53px
     h3
         line-height: 53px
 
