--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -787,12 +787,13 @@ figure.effect-text-three
     background-color: $litegreen
 .slider
     position: relative
+    // margin: 0px 25px 0px
     right: 12px
-    padding: 0px 150px 0px
+    padding: 0px 50px 0px
     .slick-arrow
         position: absolute
         top: 50%
-        margin: -50px 0px 0px 0px
+        margin: -60px 0px 0px 0px
         z-index: 10
         font-size: 0
         width: 30px
