--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -408,17 +408,19 @@ $darkgreen: #085507
 
 .separator
     background-image: url('../img/separator.webp')
-    height: 53px
+    //height: 100%
     background-position: center
-    background-repeat: repeat-x
+    background-repeat: repeat
     color: #fff
     text-align: center
-    margin-bottom: 35px
+    //padding: 35px
+    margin-bottom: 10px
     h1
         font-size: 30px
-        line-height: 53px
+        //margin-bottom: 10px
     h3
-        line-height: 53px
+        //padding: 10px
+
 
 .footer
     font-size: 10pt
@@ -787,7 +789,6 @@ figure.effect-text-three
     background-color: $litegreen
 .slider
     position: relative
-    // margin: 0px 25px 0px
     right: 12px
     padding: 0px 50px 0px
     .slick-arrow
