--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -302,7 +302,8 @@ $darkgreen: #085507
             transform: scale(1.2)
 
 .form-main
-    padding: 30px
+    padding: 5%
+    margin: 20px
     border: 1px solid #E1E1E1
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
     border-radius: 5px
@@ -338,7 +339,7 @@ $darkgreen: #085507
         transition: all 0.5s ease 0s
 
 .consultation
-    width: 60%
+    width: 80%
     margin-left: auto
     margin-right: auto
     margin-bottom: 50px
